# gworld

./: .gitignore  Cargo.toml  README.md
docs/: README.txt  chromos.txt  deliverables.txt  environs.txt  expunge.txt  independence-efficiency.txt  multi-fit.txt  multi-species.txt  repro.txt
examples/: blobs.rs  migrate.rs
src/: .lib.rs.swo  .lib.rs.swp  .math.rs.swo  .math.rs.swp  brains.rs  config.rs  genes.rs  lib.rs  math.rs  node.rs  organism.rs  world.rs
