[package]
name = "gworld"
version = "0.1.0"
edition = "2021"
authors = ["rcekan"]
description = "A library to enable genetic algorithms (beginner friendly to advanced) and reduce boilerplate setup."
license = "Apache-2.0"
repository = "https://github.com/rcekan/gworld"
keywords = ["genetic", "algorithms", "GA", "evolve", "evolution", "chromosome", "gene", "simulation", "brain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
